// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: signin unauthenticated user is prompted to authenticate 1`] = `
Object {
  "channelSlackId": "C2147483705",
  "exp": Any<Number>,
  "githubOAuthState": Any<String>,
  "iat": Any<Number>,
  "replaySlashCommand": false,
  "teamSlackId": "T0001",
  "trigger_id": "13345224609.738474920.8088930838d88f008e0",
  "userSlackId": "U2147483697",
}
`;

exports[`Integration: signin unauthenticated user is prompted to authenticate 2`] = `
Array [
  Object {
    "color": "#24292f",
    "mrkdwn_in": Array [
      "text",
    ],
    "text": ":white_check_mark: Success! <@U2147483697> is now connected to <https://github.com/wilhelmklopp|@wilhelmklopp>",
  },
]
`;

exports[`Integration: signin unauthenticated user is prompted to authenticate 3`] = `
Object {
  "createdAt": Any<Date>,
  "id": "7718702",
  "login": "wilhelmklopp",
  "secrets": Any<Object>,
  "updatedAt": Any<Date>,
}
`;

exports[`Integration: signin unauthenticated user is prompted to authenticate for slash command "close https://github.com/owner/repo/issues/123" 1`] = `
Array [
  Object {
    "color": "#24292f",
    "mrkdwn_in": Array [
      "text",
    ],
    "text": ":white_check_mark: Success! <@U2147483697> is now connected to <https://github.com/wilhelmklopp|@wilhelmklopp>",
  },
]
`;

exports[`Integration: signin unauthenticated user is prompted to authenticate for slash command "reopen https://github.com/owner/repo/issues/123" 1`] = `
Array [
  Object {
    "color": "#24292f",
    "mrkdwn_in": Array [
      "text",
    ],
    "text": ":white_check_mark: Success! <@U2147483697> is now connected to <https://github.com/wilhelmklopp|@wilhelmklopp>",
  },
]
`;

exports[`Integration: signin unauthenticated user is prompted to authenticate for slash command "subscribe kubernetes" 1`] = `
Array [
  Object {
    "color": "#24292f",
    "mrkdwn_in": Array [
      "text",
    ],
    "text": ":white_check_mark: Success! <@U2147483697> is now connected to <https://github.com/wilhelmklopp|@wilhelmklopp>",
  },
]
`;

exports[`Integration: signin unauthenticated user is prompted to authenticate for slash command "subscribe kubernetes/kubernetes" 1`] = `
Array [
  Object {
    "color": "#24292f",
    "mrkdwn_in": Array [
      "text",
    ],
    "text": ":white_check_mark: Success! <@U2147483697> is now connected to <https://github.com/wilhelmklopp|@wilhelmklopp>",
  },
]
`;

exports[`Integration: signin unauthenticated user is prompted to authenticate for slash command "unsubscribe kubernetes" 1`] = `
Array [
  Object {
    "color": "#24292f",
    "mrkdwn_in": Array [
      "text",
    ],
    "text": ":white_check_mark: Success! <@U2147483697> is now connected to <https://github.com/wilhelmklopp|@wilhelmklopp>",
  },
]
`;

exports[`Integration: signin unauthenticated user is prompted to authenticate for slash command "unsubscribe kubernetes/kubernetes" 1`] = `
Array [
  Object {
    "color": "#24292f",
    "mrkdwn_in": Array [
      "text",
    ],
    "text": ":white_check_mark: Success! <@U2147483697> is now connected to <https://github.com/wilhelmklopp|@wilhelmklopp>",
  },
]
`;

exports[`Integration: signin with a pending subscription redirects to install app and creates subscription 1`] = `
Object {
  "channelSlackId": "C2147483705",
  "exp": Any<Number>,
  "githubOAuthState": Any<String>,
  "iat": Any<Number>,
  "replaySlashCommand": true,
  "teamSlackId": "T0001",
  "trigger_id": "13345224609.738474920.8088930838d88f008e0",
  "userSlackId": "U2147483697",
}
`;

exports[`Integration: signin with a pending subscription redirects to install app and creates subscription 2`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;
